<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offers_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="20dp"
                android:text="@string/title_settings_offers"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/offer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_divider"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/offer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_divider"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="20dp"
                android:text="@string/title_general"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/settings_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_divider"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/settings_rules"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settings_rates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_divider"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/settings_rates"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settings_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_divider"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/go_to_site"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settings_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_divider"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/button_feedback"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>