<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ProgressBar
        android:id="@+id/receipt_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/receipt_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/screenshot_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@drawable/dots_top_pattern"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/receipt_details_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingBottom="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@drawable/dots_bottom_pattern"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <Button
                    android:id="@+id/button_repeat_transfer"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:text="@string/button_repeat_transfer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@android:color/holo_green_dark" />

                <Button
                    android:id="@+id/button_receipt_share"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white"
                    android:text="@string/button_share"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_receipt_feedback"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="@string/button_feedback"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_delete_receipt"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/white"
                    android:text="@string/button_delete_receipt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/receipt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/list_item_padding"
        android:text="@string/no_receipt_found"
        android:visibility="gone" />

</RelativeLayout>

