<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_padding"
            android:layout_marginRight="@dimen/list_item_padding"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:text="@string/feedback_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_padding"
            android:layout_marginRight="@dimen/list_item_padding"
            android:labelFor="@+id/feedback_email"
            android:paddingBottom="10dp"
            android:paddingTop="18dp"
            android:text="@string/feedback_email" />

        <EditText
            android:id="@+id/feedback_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingEnd="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_padding"
            android:layout_marginRight="@dimen/list_item_padding"
            android:labelFor="@+id/feedback_message"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:text="@string/feedback_message" />

        <EditText
            android:id="@+id/feedback_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:maxLines="6"
            android:paddingBottom="10dp"
            android:paddingEnd="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btn_feedback_send"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_send_feedback"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorPrimary" />

        <ProgressBar
            android:id="@+id/feedback_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>